# infernode-bench

./: .gitignore  LEADERBOARD.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: MANIFEST.json
calibration/: README.md  v0.yaml
docs/: DATASHEET.md  DECONTAMINATION-REPORT.json  DECONTAMINATION-REPORT.md  DECONTAMINATION.md  EXTERNAL-USAGE.md  GRADERS.md  METHODOLOGY.md  RUNNING-OLLAMA.md  SUBSETS.md
docs/runs/: 20260518-232427_smoke_gptoss-v4-e1.md  20260518-233753_smoke_gpt-oss_20b.md  20260519-003851_mini_gptoss-v4-e1.md  20260519-011319_mini_gpt-oss_20b.md  20260519-100201_mini_qwen3_32b.md  20260519-100408_mini_opus.md  20260519-103311_mini_sonnet.md  20260519-105425_mini_devstral_latest.md  20260519-112330_mini_haiku.md  20260519-112335_mini_devstral-limbo-v3_latest.md  20260519-125255_mini_gpt-5.5.md  README.md
infernode_bench/: __init__.py  __main__.py  calibration.py  cli.py  items.py  leaderboard.py  licenses.py  schema.py  subset.py  verify.py
infernode_bench/decontamination/: __init__.py  overlap_check.py
infernode_bench/graders/: __init__.py  compile_gate.py  judge.py  mcq.py  trace_match.py
infernode_bench/runners/: __init__.py  run.py
items/9p_tool_use/: baseline_v2.yaml  expansion_v1.yaml  expansion_v2.yaml  expansion_v3.yaml  (+1 more)
schema/: item.schema.json  result.schema.json  subset.schema.json
subsets/: full.yaml  mini.yaml  smoke.yaml
tests/: test_cli.py  test_graders.py  test_leaderboard.py  test_schema.py  test_subset.py  test_verify_licenses.py
tools/: cli_to_openai_shim.py
(+22 files in other folders)
