[project]
name = "infernode-bench"
version = "0.1.0"
description = "A benchmark for LLMs writing Inferno/InferNode code (Limbo, Plan 9 idiom C, Inferno sh, 9P-native tool use, filesystem/namespace concepts)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
infernode-bench = "infernode_bench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infernode_bench*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
